--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "@radix-ui/react-tabs": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.501.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-leaflet": "^4.0.0",
     "segura-mulher-app-trabalho": "file:",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
